# ibl-ephys-alignment-gui

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: launch.py
src/ephys_alignment_gui/: __init__.py  anatomical_atlas.py  create_overview_plots.py  custom_atlas.py  datapackage_loader.py  docdb.py  ephys_alignment.py  ephys_features.py  ephys_gui_setup.py  exceptions.py  get_scale_factor.py  histology.py  launch_gui.py  load_data_local.py  perpendicular_slice.py  plot_data.py  plot_elements.py  probe_geometry.py  probe_session.py  rigid_rotation.py  thread_worker.py  utils.py
src/ephys_alignment_gui/windows/: features_across_region.py  subject_scaling.py
tests/: test_alignment_qc_gui.py  test_datapackage_loader.py  test_perpendicular_slice.py  test_rigid_rotation.py  test_task_qc_viewer.py
